Fixed an issue where the gradient circle was cusing the background to cutoff near the boundaries. Also made the page more responsive for mobile views

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
 .App {
   text-align: center;
   background-color: #10172A;
   color: white;
-  min-height: 100%;
-  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
